feat: mini programe

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 .App {
   display: flex;
 }
-body{
-  background-color: #4B5563;
+body {
+  background-color: #4b5563;
   padding: 0;
   margin: 0;
 }
-.playground-header{
+.playground-header {
   height: 64px;
   color: #fff;
-  background-color: #1F2937;
+  background-color: #1f2937;
 }
 
-.playground-header-title{
+.playground-header-title {
   font-size: 22px;
   line-height: 64px;
   padding: 0 20px;
@@ -22,6 +22,18 @@ body{
   box-sizing: border-box;
 }
 
-.layout{
+.layout {
   margin-top: 10px;
+}
+
+.content {
+  display: flex;
+}
+
+.tool-bar {
+  width: 40px;
+}
+
+.playground {
+  flex-grow: 1;
 }
